--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div id="pageContainer">
                 <!-- Page 1: Pengantar -->
                 <div class="page active">
-                    <h2 class="text-3xl font-bold mb-6">Modul s1: Pengantar Berpikir Komputasional</h2>
+                    <h2 class="text-3xl font-bold mb-6">Modul 1: Pengantar Berpikir Komputasional</h2>
                     
                     <section class="mb-8">
                         <h3 class="text-2xl font-semibold mb-4">1.1 Definisi Berpikir Komputasional</h3>
