--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <li><a href="#" class="hover:text-blue-200" onclick="showPage(1)">Rekursi</a></li>
                 <li><a href="#" class="hover:text-blue-200" onclick="showPage(2)">Algoritma Greedy</a></li>
                 <li><a href="#" class="hover:text-blue-200" onclick="showPage(3)">Pemrograman Dinamis</a></li>
+                <li><a href="xi-1.html" class="hover:text-blue-200" onclick="showPage(3)">Kelompok XI-1</a></li>
             </ul>
         </div>
     </nav>
