--- a/xi-1.html
+++ b/xi-1.html
@@ -49,6 +49,7 @@
                     <ul class="list-disc pl-5 mb-4">
                         <li>DZAWATA MAGHFURA ZUKHRI (P)</li>
                         <li>FAISAL ALAM FADILLAH (L)</li>
+                        <li>RADJA SABI (L)</li>
                         <li>AUFA GEUBRINA (P)</li>
                         <li>FAJAR NISFUNA PUTRA (L)</li>
                     </ul>
