--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li><a href="#" class="hover:text-blue-200" onclick="showPage(2)">Algoritma Greedy</a></li>
                 <li><a href="#" class="hover:text-blue-200" onclick="showPage(3)">Pemrograman Dinamis</a></li>
                 <li><a href="xi-1.html" class="hover:text-blue-200">Kelompok XI-1</a></li>
+                <li><a href="https://docs.google.com/document/d/116u_hkysNpakdJd8_r25bhNV1495qcCA3xUGSN55alk/edit?usp=sharing" class="hover:text-blue-200">Kelompok XI-2</a></li>
                 <li><a href="xi-3.html" class="hover:text-blue-200">Kelompok XI-3</a></li>
             </ul>
         </div>
